<resources>
    <string name="app_name">AAM-SABA</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_prayer_times">Prayer Times</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="toolbar_title">Anjumane-e-Ansarul Mehdi (AS)</string>
    <string name="hijri_date">hijri_date</string>
    <string name="english_date">english_date</string>
    <string name="name">TextView</string>
    <string name="date">TextView</string>
    <string name="address">6274 Snell Ave, San Jose, CA 95123</string>
    <string name="phone">Phone</string>
    <string name="time">TextView</string>
    <string name="desc">desc</string>
    <string name="autolink_test">6274 Snell Ave San Jose, CA</string>
    <string name="signup_link"><u>No account yet? Create one</u></string>


    <string name="prayer_name">Prayer Name</string>
    <string name="prayer_time">Prayer Time</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <!-- Change the following strings as required -->
    <string name="back4app_app_id">8nGWAYgLj3z6PcN2hM3UBvdHUpAtXmRExxxN40Yu</string>
    <string name="back4app_client_key">FtklroEhu8qFgyB9N184LxptQX3yMX0u3MnLinQD</string>

</resources>
