<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <LinearLayout
        android:id="@+id/llName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/llName"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp">

        <ImageView
            android:id="@+id/ivLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_location_on_black_24dp">

        </ImageView>

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/address"
            android:text="@string/autolink_test"
            android:autoLink="map"
            tools:text="Address" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/llAddress"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/tvDay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:gravity="left"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/time" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llContact"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp">

        <ImageView
            android:id="@+id/ivPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_contact_phone_black_24dp">

        </ImageView>

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/phone"
            android:text="@string/phone"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:autoLink="phone"
            tools:text="Phone" />
    </LinearLayout>
</RelativeLayout>